@@ -1,5 +1,5 @@
 /*
- *  $Id: setup.c,v 1.8 2009/09/18 10:50:44 schmirl Exp $
+ *  $Id: setup.c,v 1.9 2009/10/13 06:38:47 schmirl Exp $
  */
  
 #include <vdr/menuitems.h>
@@ -94,13 +94,11 @@ cStreamdevServerMenuSetupPage::~cStreamdevServerMenuSetupPage() {
 }
 
 void cStreamdevServerMenuSetupPage::AddCategory(const char *Title) {
-  char *buffer = NULL;
 
-  asprintf(&buffer, "--- %s -------------------------------------------------"
+  cString str = cString::sprintf("--- %s -------------------------------------------------"
    		"---------------", Title );
 
-  cOsdItem *item = new cOsdItem(buffer);
-  free(buffer);
+  cOsdItem *item = new cOsdItem(*str);
   item->SetSelectable(false);
   Add(item);
 }
